step 7 request